# src/users/users.controller.ts
@@ -1,0 +1,81 @@
+import {
+  Body,
+  Controller,
+  Get,
+  Post,
+  UseGuards,
+  Param,
+  Patch,
+  Delete,
+} from '@nestjs/common';
+import {
+  ApiBearerAuth,
+  ApiBody,
+  ApiOperation,
+  ApiResponse,
+} from '@nestjs/swagger';
+import { CurrentUser, JwtUser } from 'src/auth/current-user.decorator';
+import { RegisterDto } from 'src/auth/dto/user.dto';
+import { JwtAuthGuard } from 'src/auth/jwt-auth.guard';
+import { Roles } from 'src/auth/roles.decorator';
+import { UsersService } from './users.service';
+
+@UseGuards(JwtAuthGuard)
+@Roles('admin')
+@Controller('users')
+export class UsersController {
+  constructor(private readonly usersService: UsersService) {}
+
+  @Post('user')
+  @ApiBearerAuth('access-token')
+  @Roles('admin')
+  @ApiOperation({ summary: 'Create new user' })
+  @ApiBody({ type: RegisterDto })
+  @ApiResponse({
+    status: 201,
+    description: 'User created successfully',
+    schema: { example: { id: 'uuid', username: 'john_doe', role: 'user' } },
+  })
+  @ApiResponse({ status: 409, description: 'Username already exists' })
+  async createUser(@Body() registerDto: RegisterDto) {
+    return this.usersService.createUser(registerDto);
+  }
+
+  @Get()
+  @ApiOperation({ summary: 'Get list of users' })
+  @ApiResponse({
+    status: 200,
+    description: 'User stats',
+  })
+  async getUsers(@CurrentUser() user: JwtUser) {
+    return this.usersService.getUsers(user.userId);
+  }
+
+  @Get(':id')
+  @ApiOperation({ summary: 'Get user by id' })
+  @ApiResponse({ status: 200, description: 'User found' })
+  @ApiResponse({ status: 404, description: 'User not found' })
+  async getUserById(@Param('id') id: string) {
+    return this.usersService.getUserById(id);
+  }
+
+  @Patch(':id')
+  @ApiOperation({ summary: 'Update user by id' })
+  @ApiBody({ type: RegisterDto })
+  @ApiResponse({ status: 200, description: 'User updated' })
+  @ApiResponse({ status: 404, description: 'User not found' })
+  async updateUser(
+    @Param('id') id: string,
+    @Body() data: Partial<RegisterDto>,
+  ) {
+    return this.usersService.updateUser(id, data);
+  }
+
+  @Delete(':id')
+  @ApiOperation({ summary: 'Delete user by id' })
+  @ApiResponse({ status: 200, description: 'User deleted' })
+  @ApiResponse({ status: 404, description: 'User not found' })
+  async deleteUser(@Param('id') id: string) {
+    return this.usersService.deleteUser(id);
+  }
+}
